Fixed footer bug

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="header">
         <div class="header-logo-text">TOP Landing Page Project</div>
-        <ul>
+        <ul class="header-links">
             <li>Header Link One</li>
             <li>Header Link Two</li>
             <li>Header Link Three</li>
@@ -52,9 +52,10 @@
                 <button>Sign up</button>
             </div>
         </div>
-    </div>
-    <div class="footer">
-        Copyright © djrphoenix
+    
+        <div class="footer">
+            Copyright © djrphoenix
+        </div>
     </div>
 </body>
 </html>
