--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="body">
         <div class="first-body">
-            <div class="main-text">This website is awesome<div>
+            <div class="main-text">This website is awesome</div>
             <div class="main-second-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
             <button>Sign up</button>
             <img src="" alt="">
