Fixed images bug and added img placeholders

--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
     <div class="body">
         <div class="first-body">
             <div class="main-text">This website is awesome</div>
-            <div class="main-second-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-            <button>Sign up</button>
-            <img src="" alt="">
+            <div class="main-second-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+            <button>Sign up</button></div>
+            <img src="https://via.placeholder.com/350x150" alt="placeholder">
         </div>
         <div class="second-body">
             <div class="info-header">Some random information.</div>
             <div class="info">
-                <a href=""></a>
+                <img src="https://via.placeholder.com/100" alt="placeholder">
                 <div class="info-text">This is some subtext under an illustration of an image.</div>
             </div>
             <div class="info">
-                <a href=""></a>
+                <img src="https://via.placeholder.com/100" alt="placeholder">
                 <div class="info-text">This is some subtext under an illustration of an image.</div>
             </div>
             <div class="info">
-                <a href=""></a>
+                <img src="https://via.placeholder.com/100" alt="placeholder">
                 <div class="info-text">This is some subtext under an illustration of an image.</div>
             </div>
             <div class="info">
-                <a href=""></a>
+                <img src="https://via.placeholder.com/100" alt="placeholder">
                 <div class="info-text">This is some subtext under an illustration of an image.</div>
             </div>
         </div>
