Added Container for info Body #2

--- a/index.html
+++ b/index.html
@@ -16,29 +16,33 @@
     </div>
     <div class="body">
         <div class="first-body">
+            <div class="hero-text">
             <div class="main-text">This website is awesome</div>
-            <div class="main-second-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
-            <button>Sign up</button></div>
+            <div class="main-second-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+            <button>Sign up</button>
+            </div>
             <img src="https://via.placeholder.com/350x150" alt="placeholder">
         </div>
         <div class="second-body">
             <div class="info-header">Some random information.</div>
-            <div class="info">
-                <img src="https://via.placeholder.com/100" alt="placeholder">
-                <div class="info-text">This is some subtext under an illustration of an image.</div>
-            </div>
-            <div class="info">
-                <img src="https://via.placeholder.com/100" alt="placeholder">
-                <div class="info-text">This is some subtext under an illustration of an image.</div>
-            </div>
-            <div class="info">
-                <img src="https://via.placeholder.com/100" alt="placeholder">
-                <div class="info-text">This is some subtext under an illustration of an image.</div>
-            </div>
-            <div class="info">
-                <img src="https://via.placeholder.com/100" alt="placeholder">
-                <div class="info-text">This is some subtext under an illustration of an image.</div>
-            </div>
+                <div class="info-container">   
+                    <div class="info">
+                        <img src="https://via.placeholder.com/100" alt="placeholder">
+                        <div class="info-text">This is some subtext under an illustration of an image.</div>
+                    </div>
+                    <div class="info">
+                        <img src="https://via.placeholder.com/100" alt="placeholder">
+                        <div class="info-text">This is some subtext under an illustration of an image.</div>
+                    </div>
+                    <div class="info">
+                        <img src="https://via.placeholder.com/100" alt="placeholder">
+                        <div class="info-text">This is some subtext under an illustration of an image.</div>
+                    </div>
+                    <div class="info">
+                        <img src="https://via.placeholder.com/100" alt="placeholder">
+                        <div class="info-text">This is some subtext under an illustration of an image.</div>
+                    </div>
+                </div>
         </div>
         <div class="third-body">
             <div class="quote">This is an inspiring qupte, or a testimonial from a customer. Maybe it's just filling up space, or
