Added container for 3rd Body & em tag for quote

--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
                 </div>
         </div>
         <div class="third-body">
-            <div class="quote">This is an inspiring qupte, or a testimonial from a customer. Maybe it's just filling up space, or
-                maybe people will actually read it. Who knows? All I know is that is looks nice.</div>
-            <div class="quote-attribute">- Thor, God of Thunder</div>
+            <div class="quote-box">
+                <div class="quote"><em>This is an inspiring qupte, or a testimonial from a customer. Maybe it's just filling up space, or
+                    maybe people will actually read it. Who knows? All I know is that is looks nice.</em></div>
+                <div class="quote-attribute">- Thor, God of Thunder</div>
+            </div>
         </div>
         <div class="fourth-body">
             <div class="call-to-action">
