--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </div>
         <div class="third-body">
             <div class="quote-box">
-                <div class="quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
-                    maybe people will actually read it. Who knows? All I know is that is looks nice.</em></div>
+                <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+                    maybe people will actually read it. Who knows? All I know is that is looks nice.</div>
                 <div class="quote-attribute">- Thor, God of Thunder</div>
             </div>
         </div>
